--- a/style.css
+++ b/style.css
@@ -257,21 +257,22 @@ RESPONSIVE IMAGE
 BREAKPOINTS
 =============================
 */
- 
  @media(min-width:576px){
     .container{
-        overflow: hidden;
+        height:900px;
+        width:1440px;
+        overflow:hidden;
     }
     
     .outer-grid{
         height:90%;
         width:80%;
-        grid-template-rows: 200px 1fr; 
+        grid-template-rows: 100px 1fr; 
         grid-template-areas: "alias-header"
                "alias-innergrid ";
     }
     .inner-grid{
-        grid-template-rows: 1fr 300px;
+        grid-template-rows: 1fr 130px;
         grid-template-areas: 
         "alias-main alias-main alias-aside"
         "alias-section1 alias-section2 alias-section3";
@@ -290,8 +291,12 @@ BREAKPOINTS
     nav li{
         list-style: none;
         font-weight: 400;
-        font-size: 1.2rem;
+        font-size: 1rem;
         color:#5d5f79;
+        cursor:pointer;
+    }
+    nav li:hover{
+       color:red;
     }
      main{
       grid-area: alias-main;
@@ -305,13 +310,14 @@ BREAKPOINTS
     }
     .responsive{
         width: 100%;
-      height: 400px;
+      height: auto;
     }
     .article-text{
         display:flex;
-        margin-top: 40px;
+        margin-top: 20px;
     }
     article h1{
+        font-size:2.5rem;
       flex-basis:40% ;
     }
     .article-flex-items{
@@ -319,7 +325,7 @@ BREAKPOINTS
       padding-top: 10px;
     }
     .article button{
-        margin-top: 30px;
+        margin-top: 20px;
         margin-bottom: 0;
       }
     aside{
@@ -328,22 +334,23 @@ BREAKPOINTS
         padding:8%;
     }
     aside h2{
-        font-size: 2.3rem;
-        margin-top: 20px;
-        margin-bottom: 30px;
+        font-size: 2rem;
+        margin-top: 15px;
+        margin-bottom: 25px;
     }
     aside h4{
-        font-size: 1.5rem;
+        font-size: 1rem;
       }
       aside p{
           
-          font-size: 1rem;
-          padding-bottom: 35px;
-          margin-bottom: 35px;
-          line-height: 2;
+          font-size: 0.7rem;
+          padding-bottom: 25px;
+          margin-bottom: 25px;
+          line-height: 1.3;
       }
       #sections{
         margin-right: 20px;
+        justify-content: flex-start;
     }
     #sections img{
         flex-basis: 30%;
@@ -378,4 +385,7 @@ BREAKPOINTS
     }
     
     
-}
+} 
+ 
+    
+
